--- a/wordpress/php.manifest.template
+++ b/wordpress/php.manifest.template
@@ -8,6 +8,7 @@ loader.insecure__use_cmdline_argv = true
 loader.env.LD_LIBRARY_PATH = "/lib:{{ arch_libdir }}:/usr/local/lib:/usr/lib:/usr/{{ arch_libdir }}"
 
 fs.mounts = [
+  { path = "/tmp",              uri = "file:/tmp", type = "tmpfs" },
   { path = "/lib",              uri = "file:{{ gramine.runtimedir() }}" },
   { path = "{{ arch_libdir }}", uri = "file:{{ arch_libdir }}" },
   { path = "/usr/lib",          uri = "file:/usr/lib" },
