Build app.zip with patches

--- a/wordpress/Dockerfile
+++ b/wordpress/Dockerfile
@@ -5,7 +5,8 @@ RUN apt-get update &&\
     apt-get install -y sgx-aesm-service build-essential libssl-dev zlib1g zlib1g-dev wget \
     re2c libmariadb-dev libxml2-dev bison libsqlite3-dev libcurl4-openssl-dev libargon2-dev \
     libpng-dev libreadline-dev libz-dev zlib1g-dev libzip-dev libbz2-dev \
-    libkrb5-dev vim less liblzma-dev netcat-openbsd curl mysql-client &&\
+    libkrb5-dev vim less liblzma-dev netcat-openbsd curl mysql-client \
+    zip &&\
     rm -rf /var/lib/apt/lists/* &&\
     wget https://go.dev/dl/go1.17.9.linux-amd64.tar.gz &&\
     tar -C /usr/local/ -xzf go1.17.9.linux-amd64.tar.gz &&\
@@ -45,6 +46,15 @@ RUN apt-get update &&\
 
 COPY . /app/
 WORKDIR /app
+
+RUN \
+    wget -q https://github.com/WordPress/WordPress/archive/refs/tags/5.9.3.zip -O WP_5.9.3.zip &&\
+    unzip WP_5.9.3.zip &&\
+    rm WP_5.9.3.zip && \
+    patch -p1 -d WordPress-5.9.3/ < wordpress_5.9.3.diff &&\
+    mv WordPress-5.9.3/ wordpress/ &&\
+    mv wp-config.php wordpress/ &&\
+    zip -rm app.zip wordpress/
 
 RUN \
 	export CGO_CFLAGS_ALLOW=".*" &&\
