--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,21 +2,15 @@ version: '2'
 
 services:
 
-  edb:
-    image: ghcr.io/edgelesssys/edgelessdb-sgx-1gb
-    ports:
-      - "8080:8080"
-      - "3306:3306"
-    devices:
-      - "/dev/sgx_enclave:/dev/sgx_enclave"
-    volumes:
-      - type: volume
-        target: /data
+  mysql:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
     environment:
-      - OE_SIMULATION=1
+      MYSQL_ROOT_PASSWORD: root
 
   wordpress:
-    image: enclaive/wordpress-sgx
+    image: enclaive/wordpress-sgx:mystikos
     build:
       context: wordpress
       dockerfile: Dockerfile
